@@ -1,4 +1,10 @@
 <STRONG>Changes since 0.9.5</STRONG><BR><BR>
+Version <STRONG>0.9.5.0517</STRONG> addresses these two bugs in 0516 build:
+<UL>
+    <LI> Fixed a key mapping problem with number keys (#1720922). </LI>
+	<LI> Fixed a key-mapping sorting bug (#1720913). </LI>
+</UL>
+
 Version <STRONG>0.9.5.0516</STRONG> includes the following changes:
 <UL>
     <LI> Key mappings and Profiles are sorted alphabetically in the their settings window.</LI>
